@@ -1,3 +1,8 @@
+Mon Oct 19 14:00:20 UTC 2009  Olli Savia  <ops@iki.fi>
+
+        * ace/Sock_Connect.cpp:
+          LynxOS improvements.
+
 Mon Oct 19 12:18:26 UTC 2009  Olli Savia  <ops@iki.fi>
 
         * ace/OS_NS_string.cpp:
